fixed modal save button text alignment

--- a/http-source/css/openpanel.css
+++ b/http-source/css/openpanel.css
@@ -1103,7 +1103,7 @@ li.tabEndPushed {
 
 .disabledGuiButtonText {
 	opacity: 0.5;
-	margin-top: -3px;
+	margin-top: -2px;
 }
 
 .disabledGuiButtonDefaultText {
